[metadata]
name = rest-api-payload-israelabraham
version = 0.0.5
author = Abram ðŸ¼
author_email = israelvictory87@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/israelabraham/API-Payload
project_urls =
    Bug Tracker = https://github.com/israelabraham/API-Payload/issues
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Education
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3