[metadata]
name = rest-api-response
version = 0.1.1
author = Abram
author_email = israelvictory87@gmail.com
description = A go-to production API response with an easy format for building APIs with Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aybruhm/api-response
project_urls =
    Bug Tracker = https://github.com/aybruhm/api-response/issues
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Education
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3